updating errors